--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.4.0+9
+  firebase_analytics: ^5.0.2
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.12.9+5
+  google_sign_in: ^4.0.14
 
+  fluttertoast: ^2.0.7
+  shared_preferences: ^0.4.1
+  flutter_rating_bar: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  intl: ^0.17.0
+  flutter_sequence_animation: 
 
 dev_dependencies:
   flutter_test:
@@ -74,3 +85,12 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  fonts:
+    - family: KosugiMaru
+      fonts:
+        - asset: lib/assets/fonts/Kosugi_Maru/KosugiMaru-Regular.ttf
+    - family: Potta_One
+      fonts:
+        - asset: lib/assets/fonts/Potta_One/PottaOne-Regular.ttf
+
